เพิ่ม Swagger ทุก API
